--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,16 @@
 				<artifactId>httpclient</artifactId>
 		</dependency>
      
-      <dependency>
+        <dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<scope>provided</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+   			<version>12.2.0.1</version>
 		</dependency>
       
 	</dependencies>
